# sprint4

./: README.md  best_model.pkl  bodyPerformanceTest.csv  notebook.ipynb  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.sh  scaler.pkl  tailwind.config.js  test.sh
data/: bodyPerformance.csv
fullstack/: db.sqlite3  manage.py
fullstack/fullstack/: asgi.py  settings.py  urls.py  wsgi.py
fullstack/predict/: forms.py  model.py  tests.py  views.py
fullstack/predict/templates/: index.html
fullstack/static/css/: output.css
