[tool.poetry]
name = "sprint-4"
version = "0.1.0"
description = ""
authors = ["Pedro Gustavo Santana <pedrogustavosantan97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
django = "^5.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
joblib = "^1.4.2"
pytest = "^8.3.3"
pytest-django = "^4.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
